--- a/style.css
+++ b/style.css
@@ -317,3 +317,26 @@ li:hover .car-images {
     display: block;
 }
 
+#payment-form input[type="text"], #payment-form input[type="number"] {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+}
+
+#payment-form input[type="submit"] {
+    width: 50%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#payment-form input[type="submit"]:hover {
+    background-color: #45a049;
+}
