--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 header {
+    font-family:Algerian;
     background-color: #333;
     color: white;
     text-align: center;
@@ -88,7 +89,6 @@ td {
     padding: 20px;
     border: 1px solid black;
     width: 1000px;
-
     text-align: center;
     display: inline-block;
     vertical-align: top;
@@ -96,34 +96,14 @@ td {
 }
 
 .step ul {
-    list-style-type: none;
+    
     text-align: left;
     padding: 0;
 }
 
-.step li::before {
-    content: "\f067";
-    font-family: FontAwesome;
-    display: inline-block;
-    margin-right: 10px;
-}
 
-
-.designated-parking-lot {
-    border-collapse: collapse;
-    width: 100%;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.designated-parking-lot th,
-td {
-    border: 1px solid black;
-    padding: 8px;
-}
-
-.designated-parking-lot th {
-    background-color: lightblue;
+.step li{
+    font-family: BankGothic Md BT;
 }
 
 form {
@@ -197,32 +177,12 @@ input[type="submit"] {
     animation-fill-mode: both;
 }
 
-/* 整体样式 */
-#reserve {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0;
-}
 
-/* 每一个车型的样式 */
-#reserve li {
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px 10px;
-    position: relative;
-    transition: all 0.3s;
-}
-
-/* 悬停样式 */
 #reserve li:hover {
     transform: scale(1.1);
 }
 
-/* 图片样式 */
+
 .car-image {
     width: 100%;
     height: 200px;
@@ -232,14 +192,14 @@ input[type="submit"] {
     transition: all 0.3s;
 }
 
-/* 悬停图片样式 */
+
 #reserve li:hover .car-image {
     transform: scale(1.2);
 }
 
 
 
-/* 按钮样式 */
+
 .reserve-btn {
     padding: 10px 20px;
     background-color: #007bff;
@@ -251,10 +211,8 @@ input[type="submit"] {
     transition: all 0.3s;
 }
 
-/* 按钮悬停样式 */
-.reserve-btn:hover {
-    background-color: #0069d9;
-}
+
+
 
 section#reserve li {
     display: inline-block;
